syntax = "proto3";
package pb;

message Prize {
    int64 id = 1;
    int64 wid = 2;
    int64 activityId = 3;
    bool  used = 4;
    string code = 5;
    string level = 6;
    int64 createdAt = 7;
}

message PrizeList {
    int64 index = 1;
    int64 limit = 2;
    int64 total = 3;
    repeated Prize prizes = 4;
}
message ChooseOneUsedPrize {
    int64  activityId = 1;
    string level = 2;
    int64  idGt = 3;
}