syntax = "proto3";
package pb;

message request_list {
    int64 index = 1;
    int64 limit = 2;
    int64 gt = 3;
    int64 lt = 4;
    map<string, string> params = 5;
}

message request_by_id {
    int64 id = 1;
}

message request_by_single_column {
    string column = 1;
}

message response_effect {
    bool success = 1;
    int64 effect = 2;
}
